--- a/src/components/SurveyScreen/SurveyScreen.module.css
+++ b/src/components/SurveyScreen/SurveyScreen.module.css
@@ -1,39 +1,29 @@
 .survey_box {
   margin-top: 120px;
   margin-left: 48px;
-  width: 864px;
-
-  .survey_counter {
+  width: 864px; }
+  .survey_box .survey_counter {
     font-weight: 500;
     font-size: 16px;
     line-height: 150%;
-    color: #2A2B30;
-  }
-
-  .header_question {
+    color: #2A2B30; }
+  .survey_box .header_question {
     font-weight: 700;
     font-size: 36px;
     line-height: 120%;
     margin-block-start: 0;
     margin-block-end: 0;
-    margin-top: 16px;
-  }
-
-  .header_color_text {
-    color: #487BFE;
-  }
-
-  .survey_counter {
+    margin-top: 16px; }
+  .survey_box .header_color_text {
+    color: #487BFE; }
+  .survey_box .survey_counter {
     font-weight: 500;
     font-size: 16px;
     line-height: 150%;
-    color: #2A2B30;
-  }
-
-  .choose_option_box {
-    margin-top: 52px;
-
-    .choose_option {
+    color: #2A2B30; }
+  .survey_box .choose_option_box {
+    margin-top: 52px; }
+    .survey_box .choose_option_box .choose_option {
       display: block;
       border-radius: 8px;
       border: 2px solid #B4B5B7;
@@ -44,18 +34,11 @@
       display: flex;
       align-items: center;
       padding-left: 32px;
-      margin-top: 16px;
-    }
-
-  }
-
-  .button_wrapper {
-    margin-top: 68px;
-  }
-
-  .like_wrapper {
+      margin-top: 16px; }
+  .survey_box .button_wrapper {
+    margin-top: 68px; }
+  .survey_box .like_wrapper {
     margin-top: 54px;
-    margin-bottom: 53px;
-  }
+    margin-bottom: 53px; }
 
-}
+/*# sourceMappingURL=SurveyScreen.module.css.map */
