--- a/src/components/StartScreen/StartScreen.module.css
+++ b/src/components/StartScreen/StartScreen.module.css
@@ -1,7 +1,8 @@
 .main_box {
   width: 100%;
   display: flex;
-  justify-content: space-between; }
+  justify-content: space-between;
+  border: 1px solid #000; }
   .main_box .left_box {
     margin-top: 120px;
     margin-right: 82px;
