--- a/src/components/StartScreen/StartScreen.module.scss
+++ b/src/components/StartScreen/StartScreen.module.scss
@@ -2,6 +2,7 @@
   width: 100%;
   display: flex;
   justify-content: space-between;
+  border: 1px solid #000;
 
   .left_box {
     margin-top: 120px;
