--- a/src/components/SurveyScreen/SurveyScreen.module.scss
+++ b/src/components/SurveyScreen/SurveyScreen.module.scss
@@ -2,6 +2,51 @@
   margin-top: 120px;
   margin-left: 48px;
   width: 864px;
+  border: 1px solid #000;
+  position: relative;
+
+
+  .survey_css_img {
+    border: 1px solid #FD003B56;
+    position: absolute;
+    width: 250px;
+    height: 340px;
+    right: -94px;
+    top: -65px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    transform: rotate(-22.29deg);
+
+    .triangle_top {
+      width: 0;
+      height: 0;
+      border-left: 92px solid transparent;
+      border-right: 92px solid transparent;
+      border-bottom: 132px solid #FFDD3C;
+      margin-bottom: -45px;
+    }
+
+    .triangle_middle {
+      width: 0;
+      height: 0;
+      border-left: 106px solid transparent;
+      border-right: 106px solid transparent;
+      border-bottom: 148px solid #FFDD3C;
+      top: 90px;
+      margin-bottom: -70px;
+    }
+
+    .triangle_bottom {
+      width: 0;
+      height: 0;
+      border-left: 118px solid transparent;
+      border-right: 118px solid transparent;
+      border-bottom: 168px solid #FFDD3C;
+      top: 180px;
+    }
+
+  }
 
   .survey_counter {
     font-weight: 500;
@@ -17,6 +62,8 @@
     margin-block-start: 0;
     margin-block-end: 0;
     margin-top: 16px;
+    position: relative;
+    z-index: 99;
   }
 
   .header_color_text {
@@ -32,6 +79,8 @@
 
   .choose_option_box {
     margin-top: 52px;
+    position: relative;
+    z-index: 99;
 
     .choose_option {
       display: block;
