--- a/src/components/ResultScreen/ResultScreen.module.scss
+++ b/src/components/ResultScreen/ResultScreen.module.scss
@@ -1,11 +1,59 @@
 .result_box {
+  width: 100%;
   display: flex;
   justify-content: space-between;
   border: 1px solid #000;
-}
+  min-height: 645px;
 
-.left_box {
-  margin-top: 12px;
-  margin-left: 48px;
-  border: 1px solid #000;
+  .left_box {
+    margin-top: 120px;
+    margin-left: 48px;
+    margin-right: 156px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
+    .left_box_text {
+
+
+      .result_header_text {
+        margin-block-start: 0;
+        margin-block-end: 0;
+        color: #2A2B30;
+        font-size: 72px;
+        font-weight: 800;
+        line-height: 120%;
+        margin-bottom: 16px;
+      }
+
+      .text_level_1, .text_level_2, .text_level_3 {
+        display: block;
+        font-weight: 600;
+        font-size: 16px;
+        margin-block-start: 0;
+        margin-block-end: 0;
+        line-height: 150%;
+        max-width: 624px;
+      }
+
+      .text_level_3 {
+        margin-top: 24px;
+      }
+    }
+
+    .like_wrapper {
+      margin-top: 52px;
+      margin-bottom: 64px;
+    }
+  }
+
+  .right_box {
+    margin-right: 48px;
+    margin-top: 111px;
+
+    .img {
+      width: 544px;
+      height: 394px;
+    }
+  }
 }
