--- a/src/components/NextButton/NextButton.module.css
+++ b/src/components/NextButton/NextButton.module.css
@@ -1,5 +1,4 @@
 .button {
-  width: 256px;
   height: 48px;
   border-radius: 8px;
   background-color: #FFDD3C;
@@ -15,8 +14,24 @@
     font-size: 20px;
     line-height: 130%;
     margin-left: 64px; }
-  .button .arrow_img {
-    margin-left: 11px;
-    margin-top: 2px; }
+
+.arrow_img {
+  margin-left: 11px;
+  margin-top: 2px; }
+
+.button_disabled {
+  height: 48px;
+  border-radius: 8px;
+  background-color: #3F4044;
+  display: flex;
+  align-items: center; }
+
+.button_text_disabled {
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 130%;
+  margin-left: 64px;
+  color: #616368;
+  margin-right: 3px; }
 
 /*# sourceMappingURL=NextButton.module.css.map */
