--- a/src/components/SurveyScreen/HeaderQuestion/HeaderQuestion.module.css
+++ b/src/components/SurveyScreen/HeaderQuestion/HeaderQuestion.module.css
@@ -1,3 +1,14 @@
+.header_question {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 120%;
+  margin-block-start: 0;
+  margin-block-end: 0;
+  margin-top: 16px;
+  position: relative;
+  z-index: 99; }
 
+.header_color_text {
+  color: #487BFE; }
 
 /*# sourceMappingURL=HeaderQuestion.module.css.map */
