--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,6 +1,5 @@
 .app {
   width: 1360px;
-  margin: 0 auto;
-  border: 1px solid #000; }
+  margin: 0 auto; }
 
 /*# sourceMappingURL=App.module.css.map */
