--- a/src/components/ResultScreen/ResultScreen.module.css
+++ b/src/components/ResultScreen/ResultScreen.module.css
@@ -1,42 +1,95 @@
 .result_box {
-  width: 100%;
+  margin: 0 auto;
+  max-width: 1600px;
   display: flex;
-  justify-content: space-between;
-  border: 1px solid #000;
-  min-height: 645px; }
+  justify-content: space-between; }
+  @media (max-width: 1023px) {
+    .result_box {
+      max-width: 1023px;
+      flex-flow: column-reverse;
+      align-items: center;
+      justify-content: flex-start; } }
   .result_box .left_box {
     margin-top: 120px;
     margin-left: 48px;
-    margin-right: 156px;
     display: flex;
-    flex-direction: column;
-    justify-content: space-between; }
-    .result_box .left_box .left_box_text .result_header_text {
-      margin-block-start: 0;
-      margin-block-end: 0;
-      color: #2A2B30;
-      font-size: 72px;
-      font-weight: 800;
-      line-height: 120%;
-      margin-bottom: 16px; }
-    .result_box .left_box .left_box_text .text_level_1, .result_box .left_box .left_box_text .text_level_2, .result_box .left_box .left_box_text .text_level_3 {
-      display: block;
-      font-weight: 600;
-      font-size: 16px;
-      margin-block-start: 0;
-      margin-block-end: 0;
-      line-height: 150%;
-      max-width: 624px; }
-    .result_box .left_box .left_box_text .text_level_3 {
-      margin-top: 24px; }
+    flex-direction: column; }
+    @media (max-width: 767px) {
+      .result_box .left_box {
+        margin-right: 48px;
+        margin-top: 80px; } }
+    @media (max-width: 550px) {
+      .result_box .left_box {
+        margin: 40px 20px 0 20px; } }
+    @media (max-width: 500px) {
+      .result_box .left_box {
+        margin: 20px 10px 0 10px; } }
+    .result_box .left_box .left_box_text {
+      margin-right: 54px;
+      display: flex;
+      flex-direction: column; }
+      .result_box .left_box .left_box_text .result_header_text {
+        margin-block-start: 0;
+        margin-block-end: 0;
+        color: #2A2B30;
+        font-size: 72px;
+        font-weight: 800;
+        line-height: 1.2;
+        margin-bottom: 16px; }
+        @media (max-width: 1280px) and (min-width: 768px) {
+          .result_box .left_box .left_box_text .result_header_text {
+            font-size: 64px; } }
+        @media (max-width: 767px) {
+          .result_box .left_box .left_box_text .result_header_text {
+            font-size: 56px; } }
+      .result_box .left_box .left_box_text .text_level_1, .result_box .left_box .left_box_text .text_level_2, .result_box .left_box .left_box_text .text_level_3 {
+        max-width: 544px;
+        display: inline-block;
+        font-weight: 600;
+        font-size: 16px;
+        margin-block-start: 0;
+        margin-block-end: 0;
+        line-height: 1.5; }
+        @media (max-width: 1280px) and (min-width: 768px) {
+          .result_box .left_box .left_box_text .text_level_1, .result_box .left_box .left_box_text .text_level_2, .result_box .left_box .left_box_text .text_level_3 {
+            font-size: 14px; } }
+        @media (max-width: 767px) {
+          .result_box .left_box .left_box_text .text_level_1, .result_box .left_box .left_box_text .text_level_2, .result_box .left_box .left_box_text .text_level_3 {
+            font-size: 12px; } }
+      .result_box .left_box .left_box_text .text_level_3 {
+        margin-top: 24px; }
     .result_box .left_box .like_wrapper {
       margin-top: 52px;
       margin-bottom: 64px; }
   .result_box .right_box {
+    margin-inline-start: 0;
+    margin-inline-end: 0;
     margin-right: 48px;
     margin-top: 111px; }
+    @media (max-width: 767px) {
+      .result_box .right_box {
+        margin-right: 0;
+        margin-top: 60px; } }
     .result_box .right_box .img {
       width: 544px;
       height: 394px; }
+      @media (max-width: 650px) {
+        .result_box .right_box .img {
+          transform: scale(0.9);
+          -o-transform: scale(0.9);
+          -moz-transform: scale(0.9);
+          -webkit-transform: scale(0.9); } }
+      @media (max-width: 600px) {
+        .result_box .right_box .img {
+          transform: scale(0.8);
+          -o-transform: scale(0.8);
+          -moz-transform: scale(0.8);
+          -webkit-transform: scale(0.8); } }
+      @media (max-width: 550px) {
+        .result_box .right_box .img {
+          transform: scale(0.7);
+          -o-transform: scale(0.7);
+          -moz-transform: scale(0.7);
+          -webkit-transform: scale(0.7); } }
 
 /*# sourceMappingURL=ResultScreen.module.css.map */
