--- a/src/components/ResultScreen/ResultScreen.module.scss
+++ b/src/components/ResultScreen/ResultScreen.module.scss
@@ -1,20 +1,38 @@
 .result_box {
-  width: 100%;
+  margin: 0 auto;
+  max-width: 1600px;
   display: flex;
   justify-content: space-between;
-  border: 1px solid #000;
-  min-height: 645px;
+
+  @media (max-width: 1023px) {
+    max-width: 1023px;
+    flex-flow: column-reverse;
+    align-items: center;
+    justify-content: flex-start;
+  }
 
   .left_box {
     margin-top: 120px;
     margin-left: 48px;
-    margin-right: 156px;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+
+
+    @media (max-width: 767px) {
+      margin-right: 48px;
+      margin-top: 80px;
+    }
+    @media (max-width: 550px) {
+      margin: 40px 20px 0 20px;
+    }
+    @media (max-width: 500px) {
+      margin: 20px 10px 0 10px;
+    }
 
     .left_box_text {
-
+      margin-right: 54px;
+      display: flex;
+      flex-direction: column;
 
       .result_header_text {
         margin-block-start: 0;
@@ -22,18 +40,30 @@
         color: #2A2B30;
         font-size: 72px;
         font-weight: 800;
-        line-height: 120%;
+        line-height: 1.2;
         margin-bottom: 16px;
+        @media (max-width: 1280px) and (min-width: 768px) {
+          font-size: 64px;
+        }
+        @media (max-width: 767px) {
+          font-size: 56px;
+        }
       }
 
       .text_level_1, .text_level_2, .text_level_3 {
-        display: block;
+        max-width: 544px;
+        display: inline-block;
         font-weight: 600;
         font-size: 16px;
         margin-block-start: 0;
         margin-block-end: 0;
-        line-height: 150%;
-        max-width: 624px;
+        line-height: 1.5;
+        @media (max-width: 1280px) and (min-width: 768px) {
+          font-size: 14px;
+        }
+        @media (max-width: 767px) {
+          font-size: 12px;
+        }
       }
 
       .text_level_3 {
@@ -48,12 +78,36 @@
   }
 
   .right_box {
+    margin-inline-start: 0;
+    margin-inline-end: 0;
     margin-right: 48px;
     margin-top: 111px;
+    @media (max-width: 767px) {
+      margin-right: 0;
+      margin-top: 60px;
+    }
 
     .img {
       width: 544px;
       height: 394px;
+      @media (max-width: 650px) {
+        transform: scale(0.9);
+        -o-transform: scale(0.9);
+        -moz-transform: scale(0.9);
+        -webkit-transform: scale(0.9);
+      }
+      @media (max-width: 600px) {
+        transform: scale(0.8);
+        -o-transform: scale(0.8);
+        -moz-transform: scale(0.8);
+        -webkit-transform: scale(0.8);
+      }
+      @media (max-width: 550px) {
+        transform: scale(0.7);
+        -o-transform: scale(0.7);
+        -moz-transform: scale(0.7);
+        -webkit-transform: scale(0.7);
+      }
     }
   }
 }
