--- a/src/components/StartScreen/StartScreen.module.scss
+++ b/src/components/StartScreen/StartScreen.module.scss
@@ -1,13 +1,35 @@
 .main_box {
-  width: 100%;
+  margin: 0 auto;
+  max-width: 1600px;
   display: flex;
   justify-content: space-between;
+
+  @media (max-width: 1023px) {
+    flex-flow: column-reverse;
+    align-items: center;
+    max-width: 1023px;
+    margin-right: 0;
+  }
 
   .left_box {
     margin-top: 120px;
     margin-right: 82px;
     flex-direction: column;
     margin-left: 48px;
+
+    @media (max-width: 1023px) {
+      margin-right: 120px;
+    }
+    @media (max-width: 767px) {
+      margin-right: 90px;
+      margin-top: 60px;
+    }
+    @media (max-width: 550px) {
+      margin: 40px 20px 0 20px;
+    }
+    @media (max-width: 500px) {
+      margin: 20px 40px 0 10px;
+    }
 
     .info_link {
       text-transform: uppercase;
@@ -17,7 +39,7 @@
       letter-spacing: 4px;
       display: flex;
       align-items: center;
-      line-height: 150%;
+      line-height: 1.5;
     }
 
     .header_text {
@@ -25,22 +47,38 @@
       font-size: 48px;
       margin-block-start: 0;
       margin-block-end: 0;
-      line-height: 130%;
+      line-height: 1.3;
       margin-top: 16px;
+      @media (max-width: 1280px) and (min-width: 768px) {
+        font-size: 42px;
+      }
+      @media (max-width: 767px) {
+        font-size: 38px;
+      }
+      @media (max-width: 536px) {
+        font-size: 38px;
+        max-width: 400px;
+      }
     }
 
     .text_level_1, .text_level_2, .text_level_3 {
-      display: block;
+      display: inline-block;
       font-weight: 600;
       font-size: 16px;
       margin-block-start: 0;
       margin-block-end: 0;
+      @media (max-width: 1280px) and (min-width: 768px) {
+        font-size: 14px;
+      }
+      @media (max-width: 767px) {
+        font-size: 12px;
+      }
     }
 
     .text_level_1 {
       margin-top: 16px;
       margin-bottom: 8px;
-      line-height: 150%;
+      line-height: 1.5;
     }
 
     .text_level_3 {
@@ -55,19 +93,43 @@
       margin-top: 52px;
       margin-bottom: 53px;
     }
-
   }
 
   .right_box {
+    margin-inline-start: 0;
+    margin-inline-end: 0;
     margin-right: 48px;
     margin-top: 111px;
+    @media (max-width: 767px) {
+      margin-right: 0;
+      margin-top: 60px;
+    }
 
     .img {
-      width: 544px;
+      width: 490px;
       height: 394px;
+      @media (max-width: 650px) {
+        transform: scale(0.9);
+        -o-transform: scale(0.9);
+        -moz-transform: scale(0.9);
+        -webkit-transform: scale(0.9);
+      }
+      @media (max-width: 600px) {
+        transform: scale(0.8);
+        -o-transform: scale(0.8);
+        -moz-transform: scale(0.8);
+        -webkit-transform: scale(0.8);
+      }
+      @media (max-width: 550px) {
+        transform: scale(0.7);
+        -o-transform: scale(0.7);
+        -moz-transform: scale(0.7);
+        -webkit-transform: scale(0.7);
+      }
     }
   }
 }
+
 
 
 
