--- a/src/components/SurveyScreen/HeaderQuestion/HeaderQuestion.module.css
+++ b/src/components/SurveyScreen/HeaderQuestion/HeaderQuestion.module.css
@@ -1,7 +1,8 @@
 .header_question {
+  min-width: 400px;
   font-weight: 700;
   font-size: 36px;
-  line-height: 120%;
+  line-height: 1.2;
   margin-block-start: 0;
   margin-block-end: 0;
   margin-top: 16px;
