--- a/src/components/SurveyScreen/OptionBox/OptionBox.module.scss
+++ b/src/components/SurveyScreen/OptionBox/OptionBox.module.scss
@@ -2,7 +2,7 @@
   border-radius: 8px;
   border: 2px solid #B4B5B7;
   font-size: 14px;
-  line-height: 150%;
+  line-height: 1.5;
   font-weight: 600;
   min-height: 48px;
   display: flex;
