--- a/src/components/SurveyScreen/SurveyScreen.module.scss
+++ b/src/components/SurveyScreen/SurveyScreen.module.scss
@@ -1,13 +1,13 @@
 .survey_box {
   margin-top: 120px;
   margin-left: 48px;
-  width: 864px;
+  max-width: 864px;
   position: relative;
 
   .survey_counter {
     font-weight: 500;
     font-size: 16px;
-    line-height: 150%;
+    line-height: 1.5;
     color: #2A2B30;
   }
 
@@ -25,5 +25,4 @@
     margin-top: 54px;
     margin-bottom: 53px;
   }
-
 }
