--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,10 @@ body {
   box-sizing: border-box;
   font-family: 'Montserrat', sans-serif;
   margin: 0;
-  padding: 0; }
+  padding: 0;
+  margin-block-start: 0;
+  margin-block-end: 0;
+  margin-inline-start: 0;
+  margin-inline-end: 0; }
 
 /*# sourceMappingURL=index.css.map */
