--- a/src/components/SurveyScreen/SurveyScreen.module.css
+++ b/src/components/SurveyScreen/SurveyScreen.module.css
@@ -1,6 +1,7 @@
 .survey_box {
-  margin-top: 120px;
-  margin-left: 48px;
+  margin: 120px auto;
+  /* margin-top: 120px;
+   margin-left: 48px;*/
   max-width: 864px;
   position: relative; }
   .survey_box .survey_counter {
