--- a/src/components/SurveyScreen/SurveyScreen.module.scss
+++ b/src/components/SurveyScreen/SurveyScreen.module.scss
@@ -1,8 +1,11 @@
+
 .survey_box {
-  margin-top: 120px;
-  margin-left: 48px;
+  margin: 120px auto;
+ /* margin-top: 120px;
+  margin-left: 48px;*/
   max-width: 864px;
   position: relative;
+
 
   .survey_counter {
     font-weight: 500;
